--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "LearnBopomofo",
-  "displayName": "LearnBopomofo",
+  "displayName": "注音符号轻松学",
   "expo": {
     "sdkVersion": "33.0.0"
   }
