--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.3",
+    "react": "^16.8.6",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-unimodules": "0.4.0",
