--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,12 +87,12 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -104,6 +104,16 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+    }
+    signingConfigs {
+        release {
+            if (project.hasProperty('S_UPLOAD_STORE_FILE')) {
+                storeFile file(S_UPLOAD_STORE_FILE)
+                storePassword S_UPLOAD_STORE_PASSWORD
+                keyAlias S_UPLOAD_KEY_ALIAS
+                keyPassword S_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     splits {
         abi {
@@ -117,6 +127,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release 
         }
     }
     // applicationVariants are e.g. debug, release
